# F_CITY

./: Bank.cpp  Bank.h  CMakeLists.txt  Database.cpp  Database.h  Item.cpp  Item.h  README.md  Shop.cpp  Shop.h  Ticket.cpp  Ticket.h  TimeInfo.cpp  TimeInfo.h  User.cpp  User.h  main.cpp
Hardware/: Hardware.cpp  Hardware.h  Lcd.cpp  Lcd.h  MFRC522.py  Rc522.cpp  Rc522.h  Read.py  output.txt  test.cpp  wiringPi.h
Payment/: Bank.cpp  Bank.h  Item.cpp  Item.h  Shop.cpp  Shop.h
Transport/: Ticket.cpp  Ticket.h
auxiliary-lib/: Database.cpp  Database.h  InterfaceFuncion.cpp  InterfaceFuncion.h  InterfaceFunction.h  TimeInfo.cpp  TimeInfo.h  mathOperation.h
